$size[20]{$u{CHANGE LOG:}}
 
$size[14]{$u{Update for 19.10.13 (Latikai):}}
  * Latikai shall try to use the changelog from now on as well!
  * Added a textbox for filtering the characters when choosing one. The filtered list will still be sorted according to your preferences: alphabetically or by last log-in.
 
$size[14]{$u{Update for 30.08.13:}}
  * fixed flatness tool displaying
 
$size[14]{$u{Update for 29.08.13:}}
  * merged loftar's code
 
$size[14]{$u{Update for 25.07.13:}}
  * fixed crash when looting people
  * merged loftar's code
  * improved options dialog a bit
 
$size[14]{$u{Update for 08.07.13:}}
  * merged loftar's code
 
$size[14]{$u{Update for 25.06.13:}}
  * merged loftar's code
 
$size[14]{$u{Update for 25.04.13:}}
  * merged loftar's code
  * unfortunately, screensooter now lost my changes. It now can't save shots to disk. Will be fixed later.
 
$size[14]{$u{Update for 28.03.13:}}
  * fixed brightness slider
  * disabled profiling - no windows will pop-up after pressing ~ key.
 
$size[14]{$u{Update for 27.02.13:}}
  * added displaying of home pointer as green arrow over character head. Can be toggled in Options
  * hopefully fixed camera distortions
 
$size[14]{$u{Update for 12.02.13:}}
  * added displaying of artifact stats and clothing slots information from wiki
 
$size[14]{$u{Update for 09.02.13:}}
  * added indication of selected area size to flatness tool
 
$size[14]{$u{Update for 07.02.13:}}
  * merged loftar's code
  * rotated main menu buttons
 
$size[14]{$u{Update for 31.01.13:}}
  * fixed ability to click on ingredients in crafting window
  * fixed changelog appearing on every launch
  * made pressed war claim button more distinct
  * added frogs to radar
 
$size[14]{$u{Update for 13.12.12:}}
  * added proper Wiki browser. Accessible from menu by X->K.
    You can drop items or icons from menu on it to search for this item.
  * added ability to take screen shots by pressing PrntScr button 